; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/html/extr_html-layout.c_format_alpha_number.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/html/extr_html-layout.c_format_alpha_number.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i32, i32, i32, i32)* @format_alpha_number to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @format_alpha_number(i32* %0, i8* %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca [40 x i32], align 16
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %17 = load i32, i32* %12, align 4
  %18 = load i32, i32* %11, align 4
  %19 = sub nsw i32 %17, %18
  %20 = add nsw i32 %19, 1
  store i32 %20, i32* %13, align 4
  %21 = load i32, i32* %11, align 4
  %22 = icmp sgt i32 %21, 256
  br i1 %22, label %23, label %26

23:                                               ; preds = %6
  %24 = load i32, i32* %13, align 4
  %25 = add nsw i32 %24, -1
  store i32 %25, i32* %13, align 4
  br label %26

26:                                               ; preds = %23, %6
  store i32 0, i32* %15, align 4
  br label %27

27:                                               ; preds = %48, %26
  %28 = load i32, i32* %10, align 4
  %29 = icmp sgt i32 %28, 0
  br i1 %29, label %30, label %57

30:                                               ; preds = %27
  %31 = load i32, i32* %10, align 4
  %32 = add nsw i32 %31, -1
  store i32 %32, i32* %10, align 4
  %33 = load i32, i32* %10, align 4
  %34 = load i32, i32* %13, align 4
  %35 = srem i32 %33, %34
  %36 = load i32, i32* %11, align 4
  %37 = add nsw i32 %35, %36
  store i32 %37, i32* %16, align 4
  %38 = load i32, i32* %11, align 4
  %39 = icmp sgt i32 %38, 256
  br i1 %39, label %40, label %48

40:                                               ; preds = %30
  %41 = load i32, i32* %16, align 4
  %42 = load i32, i32* %11, align 4
  %43 = add nsw i32 %42, 16
  %44 = icmp sgt i32 %41, %43
  br i1 %44, label %45, label %48

45:                                               ; preds = %40
  %46 = load i32, i32* %16, align 4
  %47 = add nsw i32 %46, 1
  store i32 %47, i32* %16, align 4
  br label %48

48:                                               ; preds = %45, %40, %30
  %49 = load i32, i32* %16, align 4
  %50 = load i32, i32* %15, align 4
  %51 = add nsw i32 %50, 1
  store i32 %51, i32* %15, align 4
  %52 = sext i32 %50 to i64
  %53 = getelementptr inbounds [40 x i32], [40 x i32]* %14, i64 0, i64 %52
  store i32 %49, i32* %53, align 4
  %54 = load i32, i32* %13, align 4
  %55 = load i32, i32* %10, align 4
  %56 = sdiv i32 %55, %54
  store i32 %56, i32* %10, align 4
  br label %27

57:                                               ; preds = %27
  br label %58

58:                                               ; preds = %61, %57
  %59 = load i32, i32* %15, align 4
  %60 = icmp sgt i32 %59, 0
  br i1 %60, label %61, label %72

61:                                               ; preds = %58
  %62 = load i8*, i8** %8, align 8
  %63 = load i32, i32* %15, align 4
  %64 = add nsw i32 %63, -1
  store i32 %64, i32* %15, align 4
  %65 = sext i32 %64 to i64
  %66 = getelementptr inbounds [40 x i32], [40 x i32]* %14, i64 0, i64 %65
  %67 = load i32, i32* %66, align 4
  %68 = call i32 @fz_runetochar(i8* %62, i32 %67)
  %69 = load i8*, i8** %8, align 8
  %70 = sext i32 %68 to i64
  %71 = getelementptr inbounds i8, i8* %69, i64 %70
  store i8* %71, i8** %8, align 8
  br label %58

72:                                               ; preds = %58
  %73 = load i8*, i8** %8, align 8
  %74 = getelementptr inbounds i8, i8* %73, i32 1
  store i8* %74, i8** %8, align 8
  store i8 46, i8* %73, align 1
  %75 = load i8*, i8** %8, align 8
  %76 = getelementptr inbounds i8, i8* %75, i32 1
  store i8* %76, i8** %8, align 8
  store i8 32, i8* %75, align 1
  %77 = load i8*, i8** %8, align 8
  store i8 0, i8* %77, align 1
  ret void
}

declare dso_local i32 @fz_runetochar(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
